fix cell alignment by a few pixels

--- a/IPython/frontend/html/notebook/static/notebook/less/cell.less
+++ b/IPython/frontend/html/notebook/static/notebook/less/cell.less
@@ -12,7 +12,7 @@ div.cell {
     width: 100%;
     padding: 5px 5px 5px 0px;
     /* This acts as a spacer between cells, that is outside the border */
-    margin: 2px 0px 2px 0px;
+    margin: 2px 0px 2px 6px;
     outline: none;
 }
 
